# xtextfile

./: .gitignore  CMakeLists.txt  README.md
documentation/: documentation.md
source/: xtextfile.cpp  xtextfile.h  xtextfile_inline.h
source/Unitest/: xtextfile_unit_test.h
